# VectorCore

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
_installers/: Visual Studio BuildTools 2022_17.14.25_Machine_X64_exe_en-US.yaml
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  vectrax.cp312-win_amd64.pyd  vectrax.exp  vectrax.lib  vectrax_core.lib
build_ninja/Testing/Temporary/: CTestCostData.txt
include/: HNSWIndex.hpp  VectorStore.hpp
include/vectorcore/: aligned_allocator.h  bruteforce_index.h  distance.h  hnsw_index.h
include/vectrax/: aligned_allocator.h  bruteforce_index.h  distance.h  hnsw_index.h
src/: VectorIndex.hpp  VectorStore.cpp  bruteforce_index.cpp  distance.cpp  hnsw_index.cpp  main.cpp  pybind_module.cpp
tests/: test_smoke.cpp
vectrax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
